# PDFCompilator

./: .replit  README.md  convert_icon.py  create_icon.py  create_test_pdf.py  gui.py  index.html  main.js  main.py  name_generator.py  package-lock.json  package.json  pdf_compiler.py  pyproject.toml  renderer.js  replit.nix  styles.css
static/: script.js  styles.css
templates/: index.html
